# Gillian

./: main.gil  run-model.sh
Gillian-JS/Examples/Objects/: clean.sh  run.sh
Gillian-JS/Examples/Objects/tests/: delete-concrete-prop.js  delete-symbolic-prop.js  get-concrete-prop-1.js  get-concrete-prop-2.js  get-symb-prop-1.js  get-symb-prop-2.js  get-symb-prop-3.js  get-symb-prop-4.js  keys-concrete.js  keys-symbolic.js  set-concrete-prop-1.js  set-concrete-prop-2.js  set-concrete-prop-3.js  set-concrete-prop-4.js  set-symb-prop-1.js  set-symb-prop-2.js
Gillian-JS/lib/Debugging/: JSLifter.ml
Gillian-JS/lib/LogLifting/Semantics/: LogLiftMemory.ml  dune  semantics_loglifting.ml
Gillian-JS/lib/Logging/Semantics/: LoggingMemory.ml  dune  semantics_logging.ml
Gillian-JS/lib/Semantics/: JSILSMemory.ml  LogLiftMemory.ml  LoggingMemory.ml  LoggingModel.ml  MemoryTypes.ml  MemoryUtils.ml  semantics.ml
Gillian-JS/lib/Shared/: dune
Gillian-JS/scripts/: benchmarkBuckets.sh  testBuckets.sh  testBucketsFolder.sh  testCosette.sh  testCosetteFolder.sh
GillianCore/GIL_Parser/: GIL_Lexer.mll  GIL_Parser.mly
GillianCore/GIL_Syntax/: Expr.ml  Gil_syntax.ml  Gil_syntax.mli  LCmd.ml  TriOp.ml  TypeDef__.ml
GillianCore/command_line/: wpst_console.ml
GillianCore/engine/Abstraction/: MP.ml  Normaliser.ml
GillianCore/engine/FOLogic/: Reduction.ml  typing.ml
GillianCore/engine/concrete_semantics/: CExprEval.ml
GillianCore/engine/symbolic_semantics/: SState.ml
GillianCore/logging/: logging.ml  logging.mli
GillianCore/smt/: smt.ml
GillianCore/utils/: config.ml
(+24 files in other folders)
