(library
 (name semantics_loglifting)
 (public_name gillian-js.semantics_loglifting)
 (libraries
  semantics_shared
  gillian
  jsil_syntax
  javert_utils
  js2jsil_lib
  str)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (flags :standard -open Utils -open Gillian.Utils -open Utils.Prelude))
