(library
 (name semantics_logging)
 (public_name gillian-js.semantics_logging)
 (libraries
  semantics_shared
  gillian
  jsil_syntax
  javert_utils
  js2jsil_lib
  str)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (flags :standard -open Utils -open Gillian.Utils -open Utils.Prelude))
